--- a/Website/About.html
+++ b/Website/About.html
@@ -7,21 +7,14 @@
     </head>
     <body style="color:#383B4B;">
         <header>
-            <h1>About Codex</h1>
+            <h1>About</h1>
             <nav>
-                <style>
-                    nav {
-                        display: flex;
-                    }
-                    nav a {
-                        margin-right: 10px;
-                    }
-                </style>
-                <a href="IPFSCodex.html"><h3>Home</h3></a>
-                <a href="About.html"><h3>About</h3></a>
+                <a href="IPFSCodex.html"><h3 style="display: inline;">Home</h3></a>
+                <a href="Form.html"><h3 style="display: inline;">Add to Database</h3></a>
+                <a href="Guide.html"><h3 style="display: inline;">How To</h3></a>
+                <a href="About.html"><h3 style="display: inline;">About</h3></a>
             </nav>
         <hr>
-        <!--Beans-->
         </header>
         <main>
             <article>
@@ -32,7 +25,8 @@
         </main>
         <footer>
             <hr>
-            <a href="https://github.com/DJC5/IPFS-Codex" target="_blank"><h3>GitHub</h3></a>
+            <a href="https://github.com/DJC5/IPFS-Codex" target="_blank"><h3 style="display: inline;">GitHub</h3></a>
+            <a href="https://ipfs.tech" target="_blank"><h3 style="display: inline;">IPFS Official</h3></a>
         </footer>
     </body>
 </html>
