--- a/Website/Form.html
+++ b/Website/Form.html
@@ -3,22 +3,30 @@
     <head>
         <meta charset="utf-8">
         <meta name="description" content="Web Repository for IPFS CIDs">
-        <title>IPFS Codex</title>
+        <title>Addition Form</title>
     </head>
     <body style="color:#383B4B;">
         <header>
-            <h1>IPFS Codex</h1>
+            <h1>Addition Form</h1>
             <nav>
                 <a href="IPFSCodex.html"><h3 style="display: inline;">Home</h3></a>
                 <a href="Form.html"><h3 style="display: inline;">Add to Database</h3></a>
                 <a href="Guide.html"><h3 style="display: inline;">How To</h3></a>
                 <a href="About.html"><h3 style="display: inline;">About</h3></a>
             </nav>
-        <hr>
-        <!--Beans-->
+            <hr>
         </header>
         <main>
-            <p>Web Repository for IPFS CIDs</p>
+            <h2>Add to Database</h2>
+            <p>Filename:</p>
+            <input type="text" placeholder="Filename.Extension">
+            <p>IPFS CID:</p> 
+            <input type="text" placeholder="b45165ed3cd437b9ffad02a2aad22a4ddc69162470e2622982889ce5826f6e3d">
+            <p>Share Link:</p>
+            <input type="text" placeholder="https://ipfs.io/ipfs/*CID*?filename=*filename*">
+            <p>Description:</p>
+            <textarea rows="4" cols="50"></textarea>
+            <p><a href="IPFSCodex.html"><h3 style="display: inline;">Back</h3></a></p>
         </main>
         <footer>
             <hr>
