--- a/Website/Guide.html
+++ b/Website/Guide.html
@@ -2,21 +2,24 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Guide</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>IPFS Codex | Guide</title>
+        <link rel="stylesheet" href="Style.css">
     </head>
     <body style="color:#383B4B;">
         <header>
+            <br>
             <h1>Guide</h1>
-            <nav>
-                <a href="IPFSCodex.html"><h3 style="display: inline;">Home</h3></a>
+            <nav class="nav">
+                <a href="Index.html"><h3 style="display: inline;">Home</h3></a>
                 <a href="Form.html"><h3 style="display: inline;">Add to Database</h3></a>
                 <a href="Guide.html"><h3 style="display: inline;">How To</h3></a>
                 <a href="About.html"><h3 style="display: inline;">About</h3></a>
             </nav>
-            <p><i>*Both the Destop App and the Extension are reccommended to install, but both work standalone*</i></p>
         </header>
         <main>
             <hr>
+            <p><i>*Both the Destop App and the Extension are reccommended to install, but both work standalone*</i></p>
             <section>
                 <h2>Download the Destop App</h2>
                 <ol>
@@ -35,11 +38,13 @@
                 </ol>
                 <p style="text-indent:50px;">Ex. https://ipfs.io/ipfs/*CID*?filename=*filename*</p>
             </section>
+            <hr>
         </main>
         <footer>
-            <hr>
-            <a href="https://github.com/DJC5/IPFS-Codex" target="_blank"><h3 style="display: inline;">GitHub</h3></a>
-            <a href="https://ipfs.tech" target="_blank"><h3 style="display: inline;">IPFS Official</h3></a>
+            <nav class="nav">
+                <a href="https://github.com/DJC5/IPFS-Codex" target="_blank"><h3 style="display: inline;">GitHub</h3></a>
+                <a href="https://ipfs.tech" target="_blank"><h3 style="display: inline;">IPFS Official</h3></a>
+            </nav>
         </footer>
     </body>
 </html>
