--- a/Website/Index.html
+++ b/Website/Index.html
@@ -3,28 +3,27 @@
     <head>
         <meta charset="utf-8">
         <meta name="description" content="Web Repository for IPFS CIDs">
+        <meta name="author" content="DJC5">
+        <meta name="keywords" content="IPFS, CID, IPFS CIDs, IPFS Codex, IPFS Database">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>IPFS Codex | About</title>
+        <title>IPFS Codex | Home</title>
         <link rel="stylesheet" href="Style.css">
     </head>
     <body style="color:#383B4B;">
         <header>
             <br>
-            <h1>About</h1>
+            <h1>IPFS Codex</h1>
             <nav class="nav">
                 <a href="Index.html"><h3 style="display: inline;">Home</h3></a>
                 <a href="Form.html"><h3 style="display: inline;">Add to Database</h3></a>
                 <a href="Guide.html"><h3 style="display: inline;">How To</h3></a>
                 <a href="About.html"><h3 style="display: inline;">About</h3></a>
             </nav>
+        <!--Beans-->
         </header>
         <main>
             <hr>
-            <article>
-                <section>
-                    <p>7rrtyj</p>
-                </section>
-            </article>
+            <p>Web Repository for IPFS CIDs</p>
             <hr>
         </main>
         <footer>
