Website Layout Tweaks
Next is to implement Javascript and a SQL Database to the project. Will take a while because I am learning.

--- a/Website/Form.html
+++ b/Website/Form.html
@@ -20,7 +20,7 @@
         <main>
             <hr>
             <h2>Add to Database</h2>
-            <form>
+            <form class="Addition-Form">
                 <p>Filename:</p>
                 <input type="text" placeholder="Filename.Extension">
                 <p>IPFS CID:</p> 
@@ -29,7 +29,7 @@
                 <input type="text" placeholder="https://ipfs.io/ipfs/*CID*?filename=*filename*">
                 <p>Description:</p>
                 <textarea rows="4" cols="50"></textarea>
-                <input type="submit" value="Submit">
+                <div><input class="btn" type="submit" value="Submit"></div>
             </form>
             <hr>
         </main>
