--- a/Website/Guide.html
+++ b/Website/Guide.html
@@ -19,7 +19,7 @@
         </header>
         <main>
             <hr>
-            <p><i>*Both the Destop App and the Extension are reccommended to install, but both work standalone*</i></p>
+            <p><i>*The Destop App is required to use the extension*</i></p>
             <section>
                 <h2>Download the Destop App</h2>
                 <ol>
