Added Basic Search Outline
Not near finished, but should be finished in a few days.

--- a/Website/Form.html
+++ b/Website/Form.html
@@ -12,6 +12,7 @@
             <h1>Addition Form</h1>
             <nav class="nav">
                 <a href="Index.html"><h3 style="display: inline;">Home</h3></a>
+                <a href="Search.php"><h3 style="display: inline;">Search</h3></a>
                 <a href="Form.html"><h3 style="display: inline;">Add to Database</h3></a>
                 <a href="Guide.html"><h3 style="display: inline;">How To</h3></a>
                 <a href="About.html"><h3 style="display: inline;">About</h3></a>
@@ -32,8 +33,6 @@
                     <textarea rows="4" cols="50" name="description"></textarea>
                     <div><input class="btn" type="submit" value="Submit"></div>
                 </form>
-            <script src="Form.js"></script>
-            </script>
             <hr>
         </main>
         <footer>
