--- a/Website/About.html
+++ b/Website/About.html
@@ -13,6 +13,7 @@
             <h1>About</h1>
             <nav class="nav">
                 <a href="Index.html"><h3 style="display: inline;">Home</h3></a>
+                <a href="Search.php"><h3 style="display: inline;">Search</h3></a>
                 <a href="Form.html"><h3 style="display: inline;">Add to Database</h3></a>
                 <a href="Guide.html"><h3 style="display: inline;">How To</h3></a>
                 <a href="About.html"><h3 style="display: inline;">About</h3></a>
