UI Updates and Postgresql Database Template

--- a/Website/About.html
+++ b/Website/About.html
@@ -11,19 +11,25 @@
         <header>
             <br>
             <h1>About</h1>
+            <img src="Resources/Logo.webp" class="logo">
             <nav class="nav">
-                <a href="Index.html"><h3 style="display: inline;">Home</h3></a>
-                <a href="Search.php"><h3 style="display: inline;">Search</h3></a>
-                <a href="Form.html"><h3 style="display: inline;">Add to Database</h3></a>
-                <a href="Guide.html"><h3 style="display: inline;">How To</h3></a>
-                <a href="About.html"><h3 style="display: inline;">About</h3></a>
+                <a href="index.html"><h3>Home</h3></a>
+                <a href="Search.php"><h3>Search</h3></a>
+                <a href="Form.html"><h3>Add to Database</h3></a>
+                <a href="Guide.html"><h3>How To</h3></a>
+                <a href="About.html"><h3>About</h3></a>
             </nav>
         </header>
         <main>
             <hr>
-            <article>
+            <article class="index-article">
                 <section>
-                    <p>7rrtyj</p>
+                    <h2>About</h2>
+                    <p>IPFS Codex is a web repository for IPFS CIDs and their metadata. 
+                        This website's purpose is to make the IPFS network more accessible
+                        and provide a centralized database to send and receive IPFS CIDs. 
+                        Users can search for files and contribute
+                        to the site's development by submitting new CIDs and metadata.</p>
                 </section>
             </article>
             <hr>
