--- a/Website/Form.html
+++ b/Website/Form.html
@@ -10,12 +10,13 @@
         <header>
             <br>
             <h1>Addition Form</h1>
+            <img src="Resources/Logo.webp" class="logo">
             <nav class="nav">
-                <a href="Index.html"><h3 style="display: inline;">Home</h3></a>
-                <a href="Search.php"><h3 style="display: inline;">Search</h3></a>
-                <a href="Form.html"><h3 style="display: inline;">Add to Database</h3></a>
-                <a href="Guide.html"><h3 style="display: inline;">How To</h3></a>
-                <a href="About.html"><h3 style="display: inline;">About</h3></a>
+                <a href="index.html"><h3>Home</h3></a>
+                <a href="Search.php"><h3>Search</h3></a>
+                <a href="Form.html"><h3>Add to Database</h3></a>
+                <a href="Guide.html"><h3>How To</h3></a>
+                <a href="About.html"><h3>About</h3></a>
             </nav>
         </header>
         <main>
@@ -26,7 +27,7 @@
                     <p>Filename:</p>
                     <input type="text" placeholder="Filename.Extension" name="filename">
                     <p>IPFS CID:</p> 
-                    <input type="text" placeholder="b45165ed3cd437b9ffad02a2aad22a4ddc69162470e2622982889ce5826f6e3d" name="cid">
+                    <input type="text" placeholder="QmPK1s3pNYLi9ERiq3BDxKa4XosgWwFRQUydHUtz4YgpqB" name="cid">
                     <p>Share Link(optional):</p>
                     <input type="text" placeholder="https://ipfs.io/ipfs/*CID*?filename=*filename*" name="link">
                     <p>Description(optional):</p>
