--- a/Website/Guide.html
+++ b/Website/Guide.html
@@ -10,12 +10,13 @@
         <header>
             <br>
             <h1>Guide</h1>
+            <img src="Resources/Logo.webp" class="logo">
             <nav class="nav">
-                <a href="Index.html"><h3 style="display: inline;">Home</h3></a>
-                <a href="Search.php"><h3 style="display: inline;">Search</h3></a>
-                <a href="Form.html"><h3 style="display: inline;">Add to Database</h3></a>
-                <a href="Guide.html"><h3 style="display: inline;">How To</h3></a>
-                <a href="About.html"><h3 style="display: inline;">About</h3></a>
+                <a href="index.html"><h3>Home</h3></a>
+                <a href="Search.php"><h3>Search</h3></a>
+                <a href="Form.html"><h3>Add to Database</h3></a>
+                <a href="Guide.html"><h3>How To</h3></a>
+                <a href="About.html"><h3>About</h3></a>
             </nav>
         </header>
         <main>
