SEO Tweaks and sitemap addition
Added keywords and page descriptions along with the site map.

--- a/Website/About.html
+++ b/Website/About.html
@@ -2,8 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <meta name="description" content="Web Repository for IPFS CIDs">
+        <meta name="description" content="An about page for the Web Repository for IPFS CIDs IPFS Codex">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="keywords" content="IPFS, CID, IPFS CIDs, IPFS Codex, IPFS Database, p2p file sharing, interplanetary file system, peer to peer files, peer to peer technology">
         <title>IPFS Codex | About</title>
         <link rel="stylesheet" href="Style.css">
     </head>
@@ -11,7 +12,7 @@
         <header>
             <br>
             <h1>About</h1>
-            <img src="Resources/Logo.webp" class="logo">
+            <img src="Resources/Logo.webp" alt="Logo" class="logo">
             <nav class="nav">
                 <a href="index.html"><h3>Home</h3></a>
                 <a href="Search.php"><h3>Search</h3></a>
@@ -25,11 +26,19 @@
             <article class="index-article">
                 <section>
                     <h2>About</h2>
-                    <p>IPFS Codex is a web repository for IPFS CIDs and their metadata. 
+                    <p>
+                        IPFS Codex is a web repository for IPFS CIDs and their metadata. 
                         This website's purpose is to make the IPFS network more accessible
                         and provide a centralized database to send and receive IPFS CIDs. 
                         Users can search for files and contribute
-                        to the site's development by submitting new CIDs and metadata.</p>
+                        to the site's development by submitting new CIDs and metadata.
+                    </p>
+                    <p>
+                        <h3>Contacts:</h3>
+                        This website was created and developed by
+                        <a href="https://github.com/DJC5/" target="_blank">DJC5</a>.
+                        Contact me at <a>1564822a@gmail.com</a> if you have any questions.
+                    </p>
                 </section>
             </article>
             <hr>
