--- a/Website/Guide.html
+++ b/Website/Guide.html
@@ -2,7 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <meta name="description" content="How to use IPFS CIDs with the IPFS Destop App and IPFS Web Browser extensions">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="keywords" content="IPFS, CID, IPFS CIDs, IPFS Codex, IPFS Database, p2p file sharing, interplanetary file system, peer to peer files, peer to peer technology">
         <title>IPFS Codex | Guide</title>
         <link rel="stylesheet" href="Style.css">
     </head>
@@ -10,7 +12,7 @@
         <header>
             <br>
             <h1>Guide</h1>
-            <img src="Resources/Logo.webp" class="logo">
+            <img src="Resources/Logo.webp" alt="Logo" class="logo">
             <nav class="nav">
                 <a href="index.html"><h3>Home</h3></a>
                 <a href="Search.php"><h3>Search</h3></a>
