Keyword Search and Multiple Extension Search
Keywords can now be used to search filename, extension, and description fields. Multiple extensions can now be searched at once with comma separation. *thinking about adding this to other fields*

--- a/Website/Form.html
+++ b/Website/Form.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="description" content="CID Database submission tool for the Web Repository for IPFS CIDs IPFS Codex">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="keywords" content="IPFS, CID, IPFS CIDs, IPFS Codex, IPFS Database, p2p file sharing, interplanetary file system, peer to peer files, peer to peer technology">
+        <meta name="keywords" content="IPFS, CID, IPFS CIDs, IPFS Codex, IPFS Database, p2p file sharing, interplanetary file system, peer to peer files, peer to peer technology, peer to peer networking">
         <title>IPFS Codex | Addition Form</title>
         <link rel="stylesheet" href="Style.css">
     </head>
@@ -31,7 +31,7 @@
                     <p>IPFS CID:</p> 
                     <input type="text" placeholder="QmPK1s3pNYLi9ERiq3BDxKa4XosgWwFRQUydHUtz4YgpqB" name="cid">
                     <p>Share Link(optional):</p>
-                    <input type="text" placeholder="https://ipfs.io/ipfs/*CID*?filename=*filename*" name="link">
+                    <input type="text" placeholder="/ipfs/*CID*" name="link">
                     <p>Description(optional):</p>
                     <textarea rows="4" cols="50" name="description"></textarea>
                     <div><input class="btn" type="submit" value="Submit"></div>
