--- a/Website/Index.html
+++ b/Website/Index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="description" content="Web Repository for IPFS CIDs for file transfer over peer to peer networks">
         <meta name="author" content="DJC5">
-        <meta name="keywords" content="IPFS, CID, IPFS CIDs, IPFS Codex, IPFS Database, p2p file sharing, interplanetary file system, peer to peer files, peer to peer technology">
+        <meta name="keywords" content="IPFS, CID, IPFS CIDs, IPFS Codex, IPFS Database, p2p file sharing, interplanetary file system, peer to peer files, peer to peer technology, peer to peer networking">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>IPFS Codex | Home</title>
         <link rel="stylesheet" href="Style.css">
