--- a/Website/About.html
+++ b/Website/About.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="description" content="An about page for the Web Repository for IPFS CIDs IPFS Codex">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="keywords" content="IPFS, CID, IPFS CIDs, IPFS Codex, IPFS Database, p2p file sharing, interplanetary file system, peer to peer files, peer to peer technology">
+        <meta name="keywords" content="IPFS, CID, IPFS CIDs, IPFS Codex, IPFS Database, p2p file sharing, interplanetary file system, peer to peer files, peer to peer technology, peer to peer networking">
         <title>IPFS Codex | About</title>
         <link rel="stylesheet" href="Style.css">
     </head>
