--- a/Website/Guide.html
+++ b/Website/Guide.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="description" content="How to use IPFS CIDs with the IPFS Destop App and IPFS Web Browser extensions">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="keywords" content="IPFS, CID, IPFS CIDs, IPFS Codex, IPFS Database, p2p file sharing, interplanetary file system, peer to peer files, peer to peer technology">
+        <meta name="keywords" content="IPFS, CID, IPFS CIDs, IPFS Codex, IPFS Database, p2p file sharing, interplanetary file system, peer to peer files, peer to peer technology, peer to peer networking">
         <title>IPFS Codex | Guide</title>
         <link rel="stylesheet" href="Style.css">
     </head>
