Content Type Field to Improve Search
Added new column to database containing base mime types for better table organization.

--- a/Website/Form.html
+++ b/Website/Form.html
@@ -34,6 +34,23 @@
                     <input type="text" placeholder="/ipfs/*CID*" name="link">
                     <p>Description(optional):</p>
                     <textarea rows="4" cols="50" name="description"></textarea>
+                    <p>Content Type:</p>
+                    <input type="radio" id="video" name="contenttype" value="video">
+                    <label for="video">Video</label><br>
+                    <input type="radio" id="image" name="contenttype" value="image">
+                    <label for="image">Image</label><br>
+                    <input type="radio" id="audio" name="contenttype" value="audio">
+                    <label for="audio">Audio</label><br>
+                    <input type="radio" id="application" name="contenttype" value="application">
+                    <label for="application">Application</label><br>
+                    <input type="radio" id="text" name="contenttype" value="text">
+                    <label for="text">Text</label><br>
+                    <input type="radio" id="model" name="contenttype" value="model">
+                    <label for="model">Model</label><br>
+                    <input type="radio" id="font" name="contenttype" value="font">
+                    <label for="font">Font</label><br>
+                    <input type="radio" id="other" name="contenttype" value="other">
+                    <label for="other">Other</label><br>
                     <div><input class="btn" type="submit" value="Submit"></div>
                 </form>
             <hr>
